[tool:pytest]
norecursedirs =
    .git
    dist
    build
    tests/helpers
addopts =
    --strict
    --doctest-modules
    --durations=0

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    if __name__ == .__main__.:

[coverage:run]
branch = True

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    W504  # Line break occurred after a binary operator
    F401  # Module imported but unused
    W605  # Invalid escape sequence 'x'

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown